Fix the masthead height on mobile

--- a/components/SiteHeader/SiteHeader.module.css
+++ b/components/SiteHeader/SiteHeader.module.css
@@ -75,10 +75,18 @@
   background-color: var(--brand-green);
 }
 
+
 .hero {
+  width: 100%;
+  height: 150px; 
   background-image: url('/images/masthead-large.jpg');
   background-size: cover;
   background-position: center;
-  min-height: 250px;
   border-bottom: 6px solid var(--brand-green);
+}
+
+@media (min-width: 768px) {
+  .hero {
+    min-height: 250px; 
+  }
 }
